fix(skill): extra padding

--- a/src/style/skill.css
+++ b/src/style/skill.css
@@ -23,7 +23,6 @@
 
 .skill-container {
   place-items: center;
-  padding: 5rem;
 }
 
 .skill-section {
